Fixed overlapping text
FIXED - Issue where text overlaps reCAPTCHA

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2598,3 +2598,7 @@ p.parent {
 	transform: translate(-50%, -50%);
 	text-align: center;
 }
+
+.grecaptcha-badge {
+	z-index: 99;
+}
